--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@
           <th>Speicher</th>
           <th>DB</th>
           <th>Backups</th>
-          <th>Preis</th>
-          <th>RAM-Preis</th>
-          <th>Speicher-Preis</th>
+          <th>Packetpreis</th>
           <th>Gesamt</th>
         </tr>
       </thead>
@@ -239,8 +237,6 @@
           <td>1</td>
           <td>5</td>
           <td>0€</td>
-          <td>6€</td>
-          <td>1€</td>
           <td>7€</td>
         </tr>
         <tr>
@@ -250,8 +246,6 @@
           <td>5</td>
           <td>5</td>
           <td>8€</td>
-          <td>6€</td>
-          <td>3€</td>
           <td>9€</td>
         </tr>
         <tr>
@@ -261,8 +255,6 @@
           <td>10</td>
           <td>10</td>
           <td>14€</td>
-          <td>12€</td>
-          <td>4,5€</td>
           <td>16,5€</td>
         </tr>
         <tr>
@@ -272,20 +264,7 @@
           <td>10</td>
           <td>10</td>
           <td>27€</td>
-          <td>24€</td>
-          <td>6€</td>
           <td>30€</td>
-        </tr>
-        <tr>
-          <td>Custom</td>
-          <td>—</td>
-          <td>1,50€/10GB</td>
-          <td>—</td>
-          <td>—</td>
-          <td>—</td>
-          <td>1,50€/GB</td>
-          <td>1,50€/10GB</td>
-          <td>—</td>
         </tr>
       </tbody>
     </table>
